--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -383,14 +383,14 @@
     height: 525px;
     width: 400px;
     border-radius: 4px;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,117,0.6) 100%), url('file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/images/AI.jpg');
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,117,0.6) 100%), url('/NextTech/AI.jpg');
     background-size: cover;
     position: relative;
     color: #fff;
 }
 
 .services_card:nth-child(2) {
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,117,0.6) 100%), url('file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/images/Tech.jpg');
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,117,0.6) 100%), url('/NextTech/Tech.jpg');
 }
 
 .services h2 {
