--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -457,7 +457,7 @@
     padding: 5rem 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
 }
 
