--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -458,7 +458,7 @@
     display: flex;
     flex-direction: column;
     justify-content: left;
-    align-items: center;
+    align-items: left;
 }
 
 #footer_logo {
@@ -474,7 +474,7 @@
     width: 100%;
     max-width: 1000px;
     display: flex;
-    justify-content: center;
+    justify-content: left;
 }
 
 .footer_link-wrapper {
