--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -457,8 +457,8 @@
     padding: 5rem 0;
     display: flex;
     flex-direction: column;
-    justify-content: left;
-    align-items: left;
+    justify-content: center;
+    align-items: center;
 }
 
 #footer_logo {
@@ -474,7 +474,7 @@
     width: 100%;
     max-width: 1000px;
     display: flex;
-    justify-content: left;
+    justify-content: center;
 }
 
 .footer_link-wrapper {
